fill out linalg theory background

--- a/theory/linear_function_approximation.ipynb
+++ b/theory/linear_function_approximation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fc5795d28260381b906b8fe044b3fa7e95300c2dc89411a7d533f4e56328a9e7"
+  "signature": "sha256:3ae0111379863bdbac60fe885206f853fe75bbb7d8281e8b1326b9384caeafc3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -58,7 +58,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The desired function is described with $m$ sample points and could be a single-dimensional or multi-dimensional function. In the single dimensional case,\n",
+      "The desired function is described with $m$ sample points and could be a single-dimensional or multi-dimensional function. In the single dimensional case,  $\\mathbf{y}\\in\\mathbb{R}^{m}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$,  $\\mathbf{x}\\in\\mathbb{R}^{n}$, and\n",
       "\n",
       "$$\n",
       "\\begin{bmatrix}\n",
@@ -103,30 +103,7 @@
       "\\end{bmatrix}\n",
       "$$\n",
       "\n",
-      "In the multidimensional case,\n",
-      "\n",
-      "$$\n",
-      "\\begin{bmatrix}\n",
-      "| & | & & | \\\\\n",
-      "\\mathbf{y}_0 & \\mathbf{y}_1 & \\cdots & \\mathbf{y}_d \\\\\n",
-      "| & | & & | \\\\\n",
-      "\\end{bmatrix}\n",
-      "\\approx\n",
-      "\\begin{bmatrix}\n",
-      "| & | &  & | \\\\\n",
-      "\\mathbf{a}_0 & \\mathbf{a}_1 & \\cdots & \\mathbf{a}_n \\\\\n",
-      "| & | &  & | \n",
-      "\\end{bmatrix}\n",
-      "\\begin{bmatrix}\n",
-      "| & | & & | \\\\\n",
-      "\\mathbf{x}_0 & \\mathbf{x}_1 & \\cdots & \\mathbf{x}_d \\\\\n",
-      "| & | & & | \\\\\n",
-      "\\end{bmatrix}\n",
-      "$$\n",
-      "\n",
-      "so in general, $\\mathbf{y}\\in\\mathbb{R}^{m\\times d}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$, and $\\mathbf{x}\\in\\mathbb{R}^{n\\times d}$. \n",
-      "\n",
-      "However the multidimensional case is [separable](#Separability-of-decoding-dimensions), so we need only analyze the single dimensional case where $\\mathbf{y}\\in\\mathbb{R}^{m}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$, and $\\mathbf{x}\\in\\mathbb{R}^{n}$."
+      "In the multidimensional case, $\\mathbf{y}\\in\\mathbb{R}^{m\\times d}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$, and $\\mathbf{x}\\in\\mathbb{R}^{n\\times d}$. However the multidimensional case is [separable](#Separability-of-decoding-dimensions), so we need only analyze the single dimensional case."
      ]
     },
     {
@@ -148,30 +125,41 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Our analysis will centers on the properties of $\\mathbf{A}$ in relation to the operation $\\mathbf{A}\\mathbf{x}$, which is a linear map $L:\\mathbb{R}^n\\rightarrow\\mathbb{R}^m$ between two vector spaces $\\mathbb{R}^n$ and $\\mathbb{R}^m$ where $\\mathbf{x}\\in\\mathbb{R}^n$ and $\\mathbf{y}\\in\\mathbb{R}^m$.\n",
+      "Our analysis centers on the properties of $\\mathbf{A}$ in relation to the operation $\\mathbf{A}\\mathbf{x}$, which is a linear map between two vector spaces $\\mathbb{R}^n$ and $\\mathbb{R}^m$ where $\\mathbf{x}\\in\\mathbb{R}^n$ and $\\mathbf{y}\\in\\mathbb{R}^m$. This linear map has four fundamental subspaces:\n",
+      " - The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{y}=\\mathbf{A}\\mathbf{x}$ for any $\\mathbf{x}\\in\\mathbb{R}^n$ is the _column space_ of $\\mathbf{A}$. The dimensionality of the column space is $r$, the _rank_ of $\\mathbf{A}$.\n",
+      " - The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{A}^T\\mathbf{y}=\\mathbf{x}$ for any $\\mathbf{y}\\in\\mathbb{R}^m$ is the _row space_ of $\\mathbf{A}$. The dimensionality of the row space is also $r$.\n",
+      " - The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{0}=\\mathbf{A}\\mathbf{x}$ is the _nullspace_. The dimensionality of the nullspace is $(n-r)$, the _nullity_ of $\\mathbf{A}$. The nullspace is the complement of the row space.\n",
+      " - The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{A}^T\\mathbf{y}=0$ is the _left nullspace_. The dimensionality of the left nullspace is $(m-r)$, the corank of $\\mathbf{A}$. The left null space is the complement of the column space.\n",
       "\n",
-      "The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{y}=\\mathbf{A}\\mathbf{x}$ for any $\\mathbf{x}\\in\\mathbb{R}^n$ is called the _column space_ of $\\mathbf{A}$. The dimensionality of the column space is the _rank_ of $\\mathbf{A}$.\n",
+      "More specifically, our analysis will focus on the left null space of $\\mathbf{A}$. The column space and the left nullspace are complementary subsets of $\\mathbb{R}^m$, so they span $\\mathbb{R}^m$ and divide it into two subspaces. The column space is the space of all vectors that we could possibly reach for some $\\mathbf{x}$ with $\\mathbf{A}\\mathbf{x}$. The left nullspace is the space of all vectors that are impossible for us to reach using $\\mathbf{A}\\mathbf{x}$ for any $\\mathbf{x}$. At this point, we can begin to intuit where error from our linear approximation of $\\mathbf{y}$ will come from.  If there $\\mathbf{y}$ has components in the left null space of $\\mathbf{A}$, then it will be impossible for us to recreate $\\mathbf{y}$ exactly for any $\\mathbf{x}$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To express $\\mathbf{y}$ in terms of the column space and the left null space, we will use the SVD. $\\mathbf{A}$ can be decomposed via SVD as\n",
       "\n",
-      "The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{A}^T\\mathbf{y}=\\mathbf{x}$ for any $\\mathbf{y}\\in\\mathbb{R}^m$ is called the _row space_ of $\\mathbf{A}$. The dimensionality of the row space is the also the rank of $\\mathbf{A}$.\n",
-      "\n",
-      "The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{0}=\\mathbf{A}\\mathbf{x}$ is called the _null_ space. The dimensionality of the null space is the _corank_ of $\\mathbf{A}$.\n",
-      "\n",
-      "The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{A}^T\\mathbf{y}=0$ is called the _left nullspace_. The left null space is the complement of the column space and its dimensionality is also the corank of $\\mathbf{A}$.\n",
-      "\n",
-      "$\\mathbf{A}$ can be decomposed via SVD as\n",
-      "\n",
-      "$$\n",
-      "\\mathbf{A} = \\mathbf{U}\\Sigma\\mathbf{V}^T\n",
-      "$$\n",
+      "\\begin{align}\n",
+      "\\mathbf{A} &= \\mathbf{U}\\Sigma\\mathbf{V}^T \\\\\n",
+      " &= \\sum_{i=1}^{r}\\sigma_i\\mathbf{u}_i\\mathbf{v}_i^T \\\\\n",
+      "\\end{align}\n",
       "\n",
       "where\n",
-      " - the columns of $\\mathbf{V}$ form an orthogonal basis for $\\mathbb{R}^n$,\n",
-      " - the columns of $\\mathbf{U}$ form an orthogonal basis for $\\mathbb{R}^m$,\n",
-      " - $\\Sigma$ is diagonal and the number of nonzero entries of $\\Sigma$ is the rank of $\\mathbf{A}$, \n",
+      " - $\\mathbf{U}\\in\\mathbb{R}^{m\\times m}$\n",
+      " - $\\mathbf{V}\\in\\mathbb{R}^{n\\times n}$\n",
+      " - $\\Sigma\\in\\mathbb{R}^{m\\times n}$\n",
+      " \n",
+      "and\n",
+      " - the columns of $\\mathbf{U}$ (the _left singular vectors_) form an orthogonal basis for $\\mathbb{R}^m$,\n",
+      " - the columns of $\\mathbf{V}$ (the _right singular vectors_) form an orthogonal basis for $\\mathbb{R}^n$,\n",
+      " - $\\Sigma$ is diagonal with diagonal entries $\\sigma_i$, and the number of nonzero $\\sigma_i$ is $r$. \n",
       "\n",
-      "therefore\n",
-      " - the columns of $\\mathbf{V}$ corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the null space of $\\mathbf{A}$,\n",
-      " - the columns of $\\mathbf{U}$ corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the left null space of $\\mathbf{A}$."
+      "Therefore\n",
+      " - the right singular vectors corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the nullspace of $\\mathbf{A}$,\n",
+      " - the right singular vectors corresponding to the nonzero entries of $\\Sigma$ form an orthogonal basis for the row space of $\\mathbf{A}$,\n",
+      " - the left singular vectors corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the left nullspace of $\\mathbf{A}$.\n",
+      " - the left singular vectors corresponding to the nonzero entries of $\\Sigma$ form an orthogonal basis for the column space of $\\mathbf{A}$."
      ]
     },
     {
@@ -186,12 +174,83 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Using the SVD, we can determine exactly how much error we can expect when approximating a function described by $\\mathbf{y}$ using $\\mathbf{A}\\mathbf{x}$. The error in our approximation will be exactly captured in the left null space of $\\mathbf{A}$.\n",
+      "Using the SVD, we can determine exactly how much error we can expect when approximating $\\mathbf{y}$ using $\\mathbf{A}\\mathbf{x}$. The error in our approximation will be exactly captured in the left null space of $\\mathbf{A}$. That is, we cannot possibly reach anywhere within the left nullspace using $\\mathbf{A}\\mathbf{x}$ for any $\\mathbf{x}\\in\\mathbb{R}^n$. Therefore, we should consider the projection of $\\mathbf{y}$ onto the columns of $\\mathbf{U}$ that form a basis for the left null space of $\\mathbf{A}$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This projection is expressed as \n",
+      "\\begin{align}\n",
+      "\\mathbf{y} &= \\mathbf{U}\\mathbf{U}^T\\mathbf{y} & \\mathbf{U}\\text{ is orthogonal, so }\\mathbf{U}\\mathbf{U}^T=\\mathbf{I} \\\\\n",
+      " &= \\mathbf{U}(\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "where $\\mathbf{U}_{\\sigma=0}$ contains the left singular vectors corresponding to the zero entries of $\\Sigma$, and $\\mathbf{U}_{\\sigma\\neq0}$ contains the left singular vectors corresponding to the nonzero entries of $\\Sigma$. That is, $\\mathbf{U}_{\\sigma=0}$ forms a basis for the left null space and $\\mathbf{U}_{\\sigma\\neq0}$ forms a basis for the column space. Projecting $\\mathbf{y}$ onto $\\mathbf{U}_{\\sigma=0}$ and $\\mathbf{U}_{\\sigma\\neq0}$ expresses the components of $\\mathbf{y}$ as the combination of a left null space projection and a column space projection."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "From least squares analysis, the least squares-optimal $\\mathbf{x}$ is\n",
+      "\n",
+      "$$\n",
+      "\\hat{\\mathbf{x}}=(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}\n",
+      "$$\n",
+      "\n",
+      "so \n",
+      "\n",
+      "$$\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}}=\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}\n",
+      "$$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Further,\n",
       "\n",
       "\\begin{align}\n",
-      "E &= \\mathbf{y}-\\mathbf{A}\\mathbf{x} \\\\\n",
-      " &= \\mathbf{y}-\\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x} \\\\\n",
-      " &= \\mathbf{U}^T\\mathbf{y}-\\mathbf{U}^T\\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x} \\\\\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
+      " &= U\\Sigma V^T(V\\Sigma U^TU\\Sigma V^T)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= U\\Sigma V^T(V\\Sigma^2 V^T)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= U\\Sigma V^TV\\Sigma^{-2} V^TV\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= U\\Sigma \\Sigma^{-2} \\Sigma U^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "At this point, we need to be careful. Whan happens to $\\Sigma \\Sigma^{-2} \\Sigma$ in the next step depends on the rank and dimensions of $\\mathbf{A}$. The cases are\n",
+      "\n",
+      "| $A_{m\\times n}$ is    | full rank | Not full rank |\n",
+      "|-------:|:---------:|:-------------:|\n",
+      "|__square__,   $m=n$|    $I_{m\\times m}$       |    $I_{m\\times m,\\ r}$           |\n",
+      "|__fat__,   $m<n$|    sdfs       |    sdfs           |\n",
+      "|__skinny__,  $m>n$|    sdfs       |    sdfs           |\n",
+      "\n",
+      "In the cases that $\\mathbf{A}$ is square or fat and full rank, does\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}} &= U\\Sigma \\Sigma^{-2} \\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= UU^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{y}\\\\ \n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The $RMSE$ can then be expressed as \n",
+      "\n",
+      "\\begin{align}\n",
+      "RMSE &= \\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2 \\\\\n",
+      " &= \\|\\mathbf{U}\\mathbf{U}^T\\mathbf{y}-\\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x}\\|_2 \\\\\n",
+      " &= \\|\\mathbf{U}(\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y})-\n",
+      "     \\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x}\\|_2 \\\\\n",
+      " &= \\|\\mathbf{U}(\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}-\n",
+      "     \\Sigma\\mathbf{V}^T\\mathbf{x})\\|_2 \\\\\n",
+      " &= \\|\\mathbf{U}\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}\\|_2 \\\\\n",
       "\\end{align}"
      ]
     },
