--- a/theory/linear_function_approximation.ipynb
+++ b/theory/linear_function_approximation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3ae0111379863bdbac60fe885206f853fe75bbb7d8281e8b1326b9384caeafc3"
+  "signature": "sha256:4640036c64b95a71a023e991c8ebb88583d72c32f11eb615b6cb64972f3976eb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -215,13 +215,71 @@
       "\n",
       "\\begin{align}\n",
       "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
-      " &= U\\Sigma V^T(V\\Sigma U^TU\\Sigma V^T)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
-      " &= U\\Sigma V^T(V\\Sigma^2 V^T)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
-      " &= U\\Sigma V^TV\\Sigma^{-2} V^TV\\Sigma U^T\\mathbf{y} \\\\\n",
-      " &= U\\Sigma \\Sigma^{-2} \\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T(\\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{U}\\Sigma\\mathbf{V}^T)^{-1}\n",
+      "     \\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T(\\mathbf{V}\\Sigma^2 \\mathbf{V}^T)^{-1}\\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{V}\\Sigma^{-2}\\mathbf{V}^T\\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\Sigma\\Sigma^{-2}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
       "\\end{align}\n",
       "\n",
-      "At this point, we need to be careful. Whan happens to $\\Sigma \\Sigma^{-2} \\Sigma$ in the next step depends on the rank and dimensions of $\\mathbf{A}$. The cases are\n",
+      "At this point, we need to be careful. The effect of $\\Sigma\\Sigma^{-2}\\Sigma$ in $\\mathbf{U}\\Sigma\\Sigma^{-2}\\Sigma\\mathbf{U}^T$ in the next step depends on the rank and dimensions of $\\mathbf{A}$. Recall that $\\Sigma\\in\\mathbb{R}^{m\\times n}$ and is diagonal with $r$ nonzero entries. $\\Sigma^{-1}$ is computed by setting the nonzero entries to their reciporical."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First, let's assume that $\\mathbf{A}$ is full rank.\n",
+      "\n",
+      "When $\\mathbf{A}$ is square, $\\Sigma$ is also square and all of $\\Sigma$'s diagonal entries are nonzero, so $\\Sigma\\Sigma^{-2}\\Sigma=\\mathbf{I}$.\n",
+      "\n",
+      "When $\\mathbf{A}$ is fat, $m<n$, and $\\Sigma$ is also fat. We'll use $m=2$ and $n=3$ in our example.\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\Sigma\\Sigma^{-1} &= \n",
+      "\\begin{bmatrix}\n",
+      " \\sigma_1 & 0 & 0 \\\\\n",
+      " 0 & \\sigma_2 & 0 \\\\\n",
+      "\\end{bmatrix}\n",
+      "\\begin{bmatrix}\n",
+      "1/\\sigma_1 & 0 \\\\\n",
+      "0 & 1/\\sigma_2 \\\\\n",
+      "0 & 0 \\\\\n",
+      "\\end{bmatrix} \\\\\n",
+      " &=\n",
+      "\\begin{bmatrix}\n",
+      "1 & 0 \\\\\n",
+      "0 & 1 \\\\\n",
+      "\\end{bmatrix}\n",
+      "\\end{align}\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\Sigma^{-1}\\Sigma &= \n",
+      "\\begin{bmatrix}\n",
+      "1/\\sigma_1 & 0 \\\\\n",
+      "0 & 1/\\sigma_2 \\\\\n",
+      "0 & 0 \\\\\n",
+      "\\end{bmatrix}\n",
+      "\\begin{bmatrix}\n",
+      " \\sigma_1 & 0 & 0 \\\\\n",
+      " 0 & \\sigma_2 & 0 \\\\\n",
+      "\\end{bmatrix} \\\\\n",
+      " &=\n",
+      "\\begin{bmatrix}\n",
+      "1 & 0 & 0 \\\\\n",
+      "0 & 1 & 0 \\\\\n",
+      "0 & 0 & 0 \\\\\n",
+      "\\end{bmatrix}\n",
+      "\\end{align}\n",
+      "\n",
+      "In the cases where $\\mathbf{A}$ is "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In summary, \n",
       "\n",
       "| $A_{m\\times n}$ is    | full rank | Not full rank |\n",
       "|-------:|:---------:|:-------------:|\n",
