--- a/theory/least_squares_error.ipynb
+++ b/theory/least_squares_error.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4640036c64b95a71a023e991c8ebb88583d72c32f11eb615b6cb64972f3976eb"
+  "signature": "sha256:6b715e844e3ad9c81c323762b01cc72ec5eecbf3a2165cc05eb089fb387e6ef2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,7 +43,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "...punchline goes here..."
+      "In the case where there is no noise in $\\mathbf{A}$ or $\\mathbf{y}$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\|\\mathbf{y}-\\mathbf{A}\\hat{\\mathbf{x}}\\|_2 &= \\left\\|\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}\\right\\|_2 \\\\\n",
+      " &= \\left\\|\\sum_{i=r+1}^m\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y}\\right\\|_2 \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "In the noisy case ... TO DO"
      ]
     },
     {
@@ -153,13 +160,36 @@
       "and\n",
       " - the columns of $\\mathbf{U}$ (the _left singular vectors_) form an orthogonal basis for $\\mathbb{R}^m$,\n",
       " - the columns of $\\mathbf{V}$ (the _right singular vectors_) form an orthogonal basis for $\\mathbb{R}^n$,\n",
-      " - $\\Sigma$ is diagonal with diagonal entries $\\sigma_i$, and the number of nonzero $\\sigma_i$ is $r$. \n",
+      " - $\\Sigma$ is diagonal rectangular with diagonal entries $\\sigma_i$, and the number of nonzero $\\sigma_i$ is $r$. \n",
       "\n",
       "Therefore\n",
       " - the right singular vectors corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the nullspace of $\\mathbf{A}$,\n",
       " - the right singular vectors corresponding to the nonzero entries of $\\Sigma$ form an orthogonal basis for the row space of $\\mathbf{A}$,\n",
       " - the left singular vectors corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the left nullspace of $\\mathbf{A}$.\n",
       " - the left singular vectors corresponding to the nonzero entries of $\\Sigma$ form an orthogonal basis for the column space of $\\mathbf{A}$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The least squares-optimal $\\mathbf{x}$, $\\hat{\\mathbf{x}}$, that minimizes $\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2$ is given by the pseudoinverse\n",
+      "\n",
+      "$$\n",
+      "\\hat{\\mathbf{x}}=\\mathbf{A}^+\\mathbf{y}\n",
+      "$$\n",
+      "\n",
+      "where \n",
+      "\n",
+      "$$\n",
+      "\\mathbf{A}^+=\\mathbf{V}\\Sigma^+\\mathbf{U}^T\n",
+      "$$\n",
+      "\n",
+      "and $\\Sigma^+$ is computed by setting the nonzero entries of $\\Sigma$ to their reciprocal, leaving the $0$s in place, and transposing the matrix, so $\\Sigma^+\\in\\mathbb{R}^{n\\times m}$. Also,\n",
+      " - In the case that the columns of $\\mathbf{A}$ are linearly independent, \n",
+      " $\\mathbf{A}^+=(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T$\n",
+      " - In the case that the rows of $\\mathbf{A}$ are linearly independent,\n",
+      " $\\mathbf{A}^+=\\mathbf{A}^T(\\mathbf{A}\\mathbf{A}^T)^{-1}$\n"
      ]
     },
     {
@@ -178,138 +208,165 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Column space and the left null space projections"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "This projection is expressed as \n",
       "\\begin{align}\n",
-      "\\mathbf{y} &= \\mathbf{U}\\mathbf{U}^T\\mathbf{y} & \\mathbf{U}\\text{ is orthogonal, so }\\mathbf{U}\\mathbf{U}^T=\\mathbf{I} \\\\\n",
-      " &= \\mathbf{U}(\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}) \\\\\n",
+      "\\mathbf{y} &= \\mathbf{U}\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\sum_{i=1}^mu_iu_i^Ty \\\\\n",
+      " &= \\sum_{i=1}^ru_iu_i^Ty + \\sum_{j=r+1}^mu_ju_j^Ty \\\\\n",
       "\\end{align}\n",
       "\n",
-      "where $\\mathbf{U}_{\\sigma=0}$ contains the left singular vectors corresponding to the zero entries of $\\Sigma$, and $\\mathbf{U}_{\\sigma\\neq0}$ contains the left singular vectors corresponding to the nonzero entries of $\\Sigma$. That is, $\\mathbf{U}_{\\sigma=0}$ forms a basis for the left null space and $\\mathbf{U}_{\\sigma\\neq0}$ forms a basis for the column space. Projecting $\\mathbf{y}$ onto $\\mathbf{U}_{\\sigma=0}$ and $\\mathbf{U}_{\\sigma\\neq0}$ expresses the components of $\\mathbf{y}$ as the combination of a left null space projection and a column space projection."
+      "where we've separated $u_i$ into vectors in the column space of $\\mathbf{A}$ and vectors in the left null space of $\\mathbf{A}$. Another way of expressing this is\n",
+      "\n",
+      "$$\n",
+      "\\mathbf{y} = \\mathbf{U}(\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma=0}^T\\mathbf{y})\n",
+      "$$\n",
+      "\n",
+      "where \n",
+      "\n",
+      "$$\n",
+      "\\mathbf{U}_{\\sigma\\neq0} =\n",
+      "\\begin{bmatrix}\n",
+      "| & & | & | & & | \\\\\n",
+      "u_1 & \\cdots & u_r & 0 & \\cdots & 0 \\\\ \n",
+      "| & & | & | & & | \\\\\n",
+      "\\end{bmatrix}\n",
+      "$$\n",
+      "\n",
+      "and \n",
+      "\n",
+      "$$\n",
+      "\\mathbf{U}_{\\sigma=0} =\n",
+      "\\begin{bmatrix}\n",
+      "| & & | & | & & | \\\\\n",
+      "0 & \\cdots & 0 & u_{r+1} & \\cdots & u_m \\\\ \n",
+      "| & & | & | & & | \\\\\n",
+      "\\end{bmatrix}\n",
+      "$$\n",
+      "\n",
+      "That is,\n",
+      " - $\\mathbf{U}_{\\sigma\\neq0}$ contains the left singular vectors corresponding to the nonzero entries of $\\Sigma$, and \n",
+      " - $\\mathbf{U}_{\\sigma=0}$ contains the left singular vectors corresponding to the zero entries of $\\Sigma$.\n",
+      "\n",
+      "\n",
+      "Projecting $\\mathbf{y}$ onto $\\mathbf{U}_{\\sigma\\neq0}$ and $\\mathbf{U}_{\\sigma=0}$ expresses $\\mathbf{y}$ as the combination of a column space projection and a left null space projection."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Analysis of the pseudoinverse solution"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "From least squares analysis, the least squares-optimal $\\mathbf{x}$ is\n",
+      "Setting aside our column space and left null space projection of $\\mathbf{y}$ for the moment, we now analyze the least squares solution obtained using the pseudoinverse:\n",
       "\n",
       "$$\n",
-      "\\hat{\\mathbf{x}}=(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}\n",
+      "\\hat{\\mathbf{x}} = \\mathbf{A}^+\\mathbf{y}\n",
       "$$\n",
       "\n",
       "so \n",
       "\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{A}\\mathbf{A}^+\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{V}\\Sigma^+\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\Sigma\\Sigma^+\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "At this point, we need to be careful. What becomes of $\\Sigma\\Sigma^+$ depends on the rank and dimensions of $\\mathbf{A}$. Recall that $\\Sigma\\in\\mathbb{R}^{m\\times n}$ and $\\Sigma^+\\in\\mathbb{R}^{n\\times m}$ are both diagonal rectangular with $r$ nonzero entries, so $\\Sigma\\Sigma^+\\in\\mathbb{R}^{m\\times m}$ and has $r$-$1$s along the diagonal. $r\\le m$ always so we have two cases to consider: $r=m$ and $r<m$. \n",
+      "\n",
+      "When $r=m$, $\\Sigma\\Sigma^+=\\mathbf{I}$, so\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{U}\\Sigma\\Sigma^+\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\mathbf{I}\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "At this point, we see that when $r=m$, we can exactly reconstruct $\\mathbf{y}$ using $\\mathbf{A}\\hat{\\mathbf{x}}$ for any $\\mathbf{y}$, so our approximation error will be \n",
+      "\n",
+      "\\begin{align}\n",
+      "\\|\\mathbf{y}-\\mathbf{A}\\hat{\\mathbf{x}}\\|_2 &= \\|\\mathbf{y}-\\mathbf{y}\\|_2 \\\\\n",
+      "&= 0 \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "When $r<m$, $\\Sigma\\Sigma^+=\\mathbf{I}_r$ where $\\mathbf{I}_r$ has only $r$ ones along the diagonal, so\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{U}\\Sigma\\Sigma^+\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\mathbf{I}_r\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\sum_{i=1}^m\\mathbf{i}^r_{i}\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y} \\\\\n",
+      " &= \\sum_{i=1}^r\\mathbf{i}^r_{i}\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y}+\n",
+      "     \\sum_{i=r+1}^m\\mathbf{i}^r_{i}\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y} \\\\\n",
+      " &= \\sum_{i=1}^r\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Another way of saying this is\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{U}\\Sigma\\Sigma^+\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\mathbf{I}_r\\mathbf{U}^T\\mathbf{y} \\\\\n",
+      " &= \\mathbf{U}\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "At this point, [recall](#Column-space-and-the-left-null-space-projections) our projections of $\\mathbf{y}$ onto the column space and the left null space of $\\mathbf{A}$. We see that when $r<m$, we can only reconstruct the components of $\\mathbf{y}$ that fall within the column space of $\\mathbf{A}$, so our approximation error will be\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\|\\mathbf{y}-\\mathbf{A}\\hat{\\mathbf{x}}\\|_2 &= \n",
+      "    \\left\\|\\mathbf{U}(\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma=0}^T\\mathbf{y})\n",
+      "    -\\mathbf{U}\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}\\right\\|_2 \\\\\n",
+      " &= \\left\\|\\mathbf{U}\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}\\right\\|_2 \\\\\n",
+      " &= \\left\\|\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}\\right\\|_2 & \\mathbf{U} \\text{ is a rotation matrix}\\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "which is the norm of $\\mathbf{y}$ projected onto the left null space of $\\mathbf{A}$. Put in summation notation,\n",
+      "\n",
       "$$\n",
-      "\\mathbf{A}\\hat{\\mathbf{x}}=\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}\n",
+      "\\|\\mathbf{y}-\\mathbf{A}\\hat{\\mathbf{x}}\\|_2 = \n",
+      "    \\left\\|\\sum_{i=r+1}^m\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y}\\right\\|_2\n",
       "$$"
      ]
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
      "source": [
-      "Further,\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\mathbf{A}\\hat{\\mathbf{x}} &= \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
-      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T(\\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{U}\\Sigma\\mathbf{V}^T)^{-1}\n",
-      "     \\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
-      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T(\\mathbf{V}\\Sigma^2 \\mathbf{V}^T)^{-1}\\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
-      " &= \\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{V}\\Sigma^{-2}\\mathbf{V}^T\\mathbf{V}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
-      " &= \\mathbf{U}\\Sigma\\Sigma^{-2}\\Sigma\\mathbf{U}^T\\mathbf{y} \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "At this point, we need to be careful. The effect of $\\Sigma\\Sigma^{-2}\\Sigma$ in $\\mathbf{U}\\Sigma\\Sigma^{-2}\\Sigma\\mathbf{U}^T$ in the next step depends on the rank and dimensions of $\\mathbf{A}$. Recall that $\\Sigma\\in\\mathbb{R}^{m\\times n}$ and is diagonal with $r$ nonzero entries. $\\Sigma^{-1}$ is computed by setting the nonzero entries to their reciporical."
+      "NEF applications"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "First, let's assume that $\\mathbf{A}$ is full rank.\n",
-      "\n",
-      "When $\\mathbf{A}$ is square, $\\Sigma$ is also square and all of $\\Sigma$'s diagonal entries are nonzero, so $\\Sigma\\Sigma^{-2}\\Sigma=\\mathbf{I}$.\n",
-      "\n",
-      "When $\\mathbf{A}$ is fat, $m<n$, and $\\Sigma$ is also fat. We'll use $m=2$ and $n=3$ in our example.\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\Sigma\\Sigma^{-1} &= \n",
-      "\\begin{bmatrix}\n",
-      " \\sigma_1 & 0 & 0 \\\\\n",
-      " 0 & \\sigma_2 & 0 \\\\\n",
-      "\\end{bmatrix}\n",
-      "\\begin{bmatrix}\n",
-      "1/\\sigma_1 & 0 \\\\\n",
-      "0 & 1/\\sigma_2 \\\\\n",
-      "0 & 0 \\\\\n",
-      "\\end{bmatrix} \\\\\n",
-      " &=\n",
-      "\\begin{bmatrix}\n",
-      "1 & 0 \\\\\n",
-      "0 & 1 \\\\\n",
-      "\\end{bmatrix}\n",
-      "\\end{align}\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\Sigma^{-1}\\Sigma &= \n",
-      "\\begin{bmatrix}\n",
-      "1/\\sigma_1 & 0 \\\\\n",
-      "0 & 1/\\sigma_2 \\\\\n",
-      "0 & 0 \\\\\n",
-      "\\end{bmatrix}\n",
-      "\\begin{bmatrix}\n",
-      " \\sigma_1 & 0 & 0 \\\\\n",
-      " 0 & \\sigma_2 & 0 \\\\\n",
-      "\\end{bmatrix} \\\\\n",
-      " &=\n",
-      "\\begin{bmatrix}\n",
-      "1 & 0 & 0 \\\\\n",
-      "0 & 1 & 0 \\\\\n",
-      "0 & 0 & 0 \\\\\n",
-      "\\end{bmatrix}\n",
-      "\\end{align}\n",
-      "\n",
-      "In the cases where $\\mathbf{A}$ is "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "In summary, \n",
+      "NEF uses least squares to linear approximate some desired function using the weighted combination of neural tuning curves.\n",
       "\n",
       "| $A_{m\\times n}$ is    | full rank | Not full rank |\n",
       "|-------:|:---------:|:-------------:|\n",
       "|__square__,   $m=n$|    $I_{m\\times m}$       |    $I_{m\\times m,\\ r}$           |\n",
       "|__fat__,   $m<n$|    sdfs       |    sdfs           |\n",
-      "|__skinny__,  $m>n$|    sdfs       |    sdfs           |\n",
-      "\n",
-      "In the cases that $\\mathbf{A}$ is square or fat and full rank, does\n",
-      "\\begin{align}\n",
-      "\\mathbf{A}\\hat{\\mathbf{x}} &= U\\Sigma \\Sigma^{-2} \\Sigma U^T\\mathbf{y} \\\\\n",
-      " &= UU^T\\mathbf{y} \\\\\n",
-      " &= \\mathbf{y}\\\\ \n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The $RMSE$ can then be expressed as \n",
-      "\n",
-      "\\begin{align}\n",
-      "RMSE &= \\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2 \\\\\n",
-      " &= \\|\\mathbf{U}\\mathbf{U}^T\\mathbf{y}-\\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x}\\|_2 \\\\\n",
-      " &= \\|\\mathbf{U}(\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y})-\n",
-      "     \\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x}\\|_2 \\\\\n",
-      " &= \\|\\mathbf{U}(\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}+\\mathbf{U}_{\\sigma\\neq0}^T\\mathbf{y}-\n",
-      "     \\Sigma\\mathbf{V}^T\\mathbf{x})\\|_2 \\\\\n",
-      " &= \\|\\mathbf{U}\\mathbf{U}_{\\sigma=0}^T\\mathbf{y}\\|_2 \\\\\n",
-      "\\end{align}"
+      "|__skinny__,  $m>n$|    sdfs       |    sdfs           |"
      ]
     },
     {
