--- a/theory/least_squares.ipynb
+++ b/theory/least_squares.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3a57c5b0fcb7cc4b3de31cdf878abe1d317fd294baf180b7010676b7a84a6432"
+  "signature": "sha256:edddd6efcfb723ee8cda8d4341601104fb9adcbd73fbe3cff6e87f4514a38f2b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,9 +28,9 @@
       }
      },
      "source": [
-      "This notebook takes a critical look at the least squares and regularized least squares algorithm in the context of NEF. Specifically:\n",
-      " - when is the least-squares algorithm to be used?\n",
-      " - when is the regularized least-squares algorithm to be used? When will it break?"
+      "This notebook examines the least squares and regularized least squares algorithm in the context of NEF. Specifically:\n",
+      " - when should least-squares be used?\n",
+      " - when should regularized least-squares algorithm be used? When will it break?"
      ]
     },
     {
