--- a/theory/least_squares_error.ipynb
+++ b/theory/least_squares_error.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6b715e844e3ad9c81c323762b01cc72ec5eecbf3a2165cc05eb089fb387e6ef2"
+  "signature": "sha256:14c760f8fd45cfd07a5c3aac50e58bb4746753df191499c1315f56fcab584b74"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,15 +20,29 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook examines our ability to approximate arbitrary functions linearly. \n",
+      "This notebook examines the error that results from the [least squares](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/least_squares.ipynb).\n",
       "\n",
-      "In linear function approximation, our goal is to approximate a desired function, $\\mathbf{y}$, as the linear combination of approximator functions, $\\mathbf{a}_i$, using weights $\\mathbf{x}$. That is, \n",
+      "In least squares, our goal is to approximate a desired vector, $\\mathbf{y}$, as the linear combination of vectors $\\mathbf{a}_i$, using weights $\\mathbf{x}$. That is, we would like\n",
       "\n",
       "$$\n",
       "\\mathbf{y}\\approx\\mathbf{A}\\mathbf{x}\n",
       "$$\n",
       "\n",
-      "Specifically, we would like to know: Given a regressand and set of regressors, how well could our regressors approximate the regressand?"
+      "We will see that under some conditions $\\mathbf{A}\\mathbf{x}=\\mathbf{y}$ exactly, but under other conditions we can only approximate $\\mathbf{y}$. Therefore, the least squares technique formulates the problem as\n",
+      "\n",
+      "$$\n",
+      "\\min\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|\n",
+      "$$\n",
+      "\n",
+      "or rather finding $\\hat{\\mathbf{x}}$ where\n",
+      "\n",
+      "$$\n",
+      "\\hat{\\mathbf{x}}=\\argmin_{x}\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|\n",
+      "$$\n",
+      "\n",
+      "\n",
+      "Specifically, we would like to know: \n",
+      " - How accurate is our approximation of $\\mathbf{y}$?"
      ]
     },
     {
