more links between ls and lse notebooks. update readme

--- a/theory/least_squares.ipynb
+++ b/theory/least_squares.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:edddd6efcfb723ee8cda8d4341601104fb9adcbd73fbe3cff6e87f4514a38f2b"
+  "signature": "sha256:5a7fd47b8553581a24cce9545d9756e3e55a423927379ab9ca05de6ef7ac6d1c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,9 +28,31 @@
       }
      },
      "source": [
-      "This notebook examines the least squares and regularized least squares algorithm in the context of NEF. Specifically:\n",
-      " - when should least-squares be used?\n",
-      " - when should regularized least-squares algorithm be used? When will it break?"
+      "This notebook examines the least squares and regularized least squares algorithm, particularly in the context of NEF. \n",
+      "\n",
+      "\n",
+      "In least squares, our goal is to approximate a desired vector, $\\mathbf{y}$, as the linear combination of vectors $\\mathbf{a}_i$, using weights $\\mathbf{x}$. That is, we would like\n",
+      "\n",
+      "$$\n",
+      "\\mathbf{y}\\approx\\mathbf{A}\\mathbf{x}\n",
+      "$$\n",
+      "\n",
+      "To find the best approximation of $\\mathbf{y}$, the least squares technique formulates the problem as\n",
+      "\n",
+      "$$\n",
+      "\\min\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2\n",
+      "$$\n",
+      "\n",
+      "or rather finding $\\hat{\\mathbf{x}}$ where\n",
+      "\n",
+      "$\\DeclareMathOperator*{\\argmin}{arg\\,min}$\n",
+      "$$\n",
+      "\\hat{\\mathbf{x}}=\\argmin_{\\mathbf{x}}\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2\n",
+      "$$\n",
+      "\n",
+      "Specifically, we would like to know:\n",
+      " - When should least-squares be used?\n",
+      " - When should regularized least-squares algorithm be used? When will it break?"
      ]
     },
     {
@@ -43,14 +65,10 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
+     "metadata": {},
      "source": [
       "$\\DeclareMathOperator*{\\argmin}{arg\\,min}$\n",
-      "For inputs $\\mathbf{x}$, activity matrix $\\mathbf{A}$, and outputs $\\mathbf{y}$, we desire\n",
+      "For $\\mathbf{x}\\in\\mathbb{R}^{n}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$, and outputs $\\mathbf{y}\\in\\mathbb{R}^{m}$, we desire\n",
       "\n",
       "$$\n",
       "\\mathbf{y}=\\mathbf{A}\\mathbf{x}\n",
@@ -113,15 +131,28 @@
       "\\end{bmatrix}\n",
       "$$ \n",
       "\n",
-      "is the tuning curve of the $i$th neuron, so\n",
+      "so\n",
       "\n",
       "$$\n",
-      "\\mathbf{y}=\\sum_{i=0}^{n}\\mathbf{a}_ix_i\n",
-      "$$\n",
+      "\\mathbf{y}=\\sum_{i=1}^{n}\\mathbf{a}_ix_i\n",
+      "$$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "In statistics, $\\mathbf{y}$ is called the regressand, $\\mathbf{a}_i$ are called regressors, and $\\mathbf{x}$ are the regression coefficients.\n",
       "\n",
-      "$\\|\\cdot\\|_p$ indicates taking the $p$-norm.\n",
+      "In NEF,  $\\mathbf{y}$ consists of sample points of the desired function, $\\mathbf{a}_i$ are the neural tuning curves, and $\\mathbf{x}$ are the decoding weights. However, you may see different notation used in NEF texts. In NEF texts, $\\mathbf{x}$ represents the input to the neurons, so $\\mathbf{a}_i$ becomes $\\mathbf{a}_i(\\mathbf{x})$ and $\\phi$ is used instead of $\\mathbf{x}$ to represent the decoding weights. $\\mathbf{y}$ becomes $f(\\mathbf{x})$ as it consists of samples from a function of $\\mathbf{x}$. Putting these changes together using NEF notation, we would write $f(\\mathbf{x})=\\sum_{i=1}^{n}\\mathbf{a}_i(\\mathbf{x})\\phi_i$ instead of $\\mathbf{y}=\\sum_{i=1}^{n}\\mathbf{a}_ix_i$.\n",
       "\n",
-      "$\\argmin_{x}(\\cdot)$ indicates the $x$ that minimizes the $(\\cdot)$ expression."
+      "As a final point of notation:\n",
+      " - $\\|\\cdot\\|_p$ indicates taking the $p$-norm.\n",
+      " - $\\argmin_{x}(\\cdot)$ indicates the $x$ that minimizes the $(\\cdot)$ expression."
      ]
     },
     {
@@ -140,7 +171,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The goal of least squares is to minimize the error between $\\mathbf{A}\\mathbf{x}$ and $\\mathbf{y}$. We would like the $\\mathbf{a}_i$ to linearly approximate $\\mathbf{y}$ using the weights $\\mathbf{x}$. \n",
+      "The goal of least squares is to minimize the error between $\\mathbf{A}\\mathbf{x}$ and $\\mathbf{y}$. We would like the $\\mathbf{a}_i$ to linearly approximate $\\mathbf{y}$ using $\\mathbf{x}$. \n",
       "\n",
       "Error (aka _residuals_) is given by $\\mathbf{e}=\\mathbf{A}\\mathbf{x}-\\mathbf{y}$. We seek $\\mathbf{x}$ to minimize\n",
       "\n",
@@ -240,7 +271,7 @@
       "    \\end{bmatrix}\n",
       "\\end{align}\n",
       "\n",
-      "These are the pairwise projections of the tuning curves onto each other."
+      "In the context of NEF, these are the pairwise projections of the tuning curves onto each other."
      ]
     },
     {
@@ -271,55 +302,9 @@
       "    \\sum_{i=0}^mA_{n,i}y_i \\\\\n",
       "    \\end{bmatrix} \\\\\n",
       "\\end{align}\n",
-      "This is the projection of the output onto the tuning curves."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The error of this solution will be\n",
+      "In the context of NEF, this is the projection of the output onto the tuning curves.\n",
       "\n",
-      "\\begin{align}\n",
-      "\\mathbf{e} &= \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}-\\mathbf{y} \\\\\n",
-      " &= \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y} \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "Here, we can see that the error will be $\\mathbf{0}$ when $\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T=I$ and is purely a function of the tuning curves. How do I interpret this result?...\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T &= U\\Sigma V^T(V\\Sigma U^TU\\Sigma V^T)^{-1}V\\Sigma U^T \\\\\n",
-      " &= U\\Sigma V^T(V\\Sigma^2 V^T)^{-1}V\\Sigma U^T\\\\\n",
-      " &= U\\Sigma V^TV\\Sigma^{-2} V^TV\\Sigma U^T \\\\\n",
-      " &= U\\Sigma \\Sigma^{-2} \\Sigma U^T\\\\\n",
-      " &= UU^T & \\text{if }\\Sigma\\text{ is square and full rank}\\\\\n",
-      " &= I\\\\ \n",
-      "\\end{align}\n",
-      "\n",
-      "Note the requirement on $\\Sigma$, which puts constraints on $U$ and $V$. What if these are not satisfied? More work to be done here..."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The norm of the error will be \n",
-      "\n",
-      "\\begin{align}\n",
-      "\\|\\mathbf{e}\\|_2 &= \\left\\|\\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y}\\right\\|_2 \\\\\n",
-      " &= \\sqrt{\\mathbf{y}^T\\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)^T\n",
-      "          \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y}} \\\\\n",
-      " &= \\sqrt{\\mathbf{y}^T\\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\n",
-      "          \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y}} \\\\\n",
-      " &= \\sqrt{\\mathbf{y}^T\n",
-      "    \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\n",
-      "    -2\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T+I\\right)\\mathbf{y}} \\\\\n",
-      " &= \\sqrt{\\mathbf{y}^T\n",
-      "    \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\n",
-      "    -2\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T+I\\right)\\mathbf{y}} \\\\\n",
-      " &= \\sqrt{\\mathbf{y}^T\\left(I-\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\right)\\mathbf{y}} \\\\\n",
-      " &= \\sqrt{\\mathbf{y}^T\\mathbf{y}-\\mathbf{y}^T\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}} \\\\\n",
-      "\\end{align}"
+      "[Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/least_squares_error.ipynb) is a discussion of the error in least squares."
      ]
     },
     {
@@ -334,7 +319,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We could consider noise in $\\mathbf{A}$, $\\mathbf{x}$, or $\\mathbf{y}$. However, given that we specify $\\mathbf{x}$ and $\\mathbf{y}$, noise will only be present in $\\mathbf{A}$, so here we analyze noise in $\\mathbf{A}$. Noise in the output $\\mathbf{y}$ is considered in the Supplementary material of this notebook. Noise in $\\mathbf{A}$ arises because of spikes and how we obtain $\\mathbf{A}$."
+      "We could consider noise in $\\mathbf{A}$, $\\mathbf{x}$, or $\\mathbf{y}$. However, in NEF, given that we specify $\\mathbf{x}$ and $\\mathbf{y}$, noise will only be present in $\\mathbf{A}$, so here we analyze noise in $\\mathbf{A}$. Noise in the output $\\mathbf{y}$ is considered in the Supplementary material of this notebook. Noise in $\\mathbf{A}$ arises because of spikes and how we obtain $\\mathbf{A}$."
      ]
     },
     {
