--- a/theory/least_squares_error.ipynb
+++ b/theory/least_squares_error.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:14c760f8fd45cfd07a5c3aac50e58bb4746753df191499c1315f56fcab584b74"
+  "signature": "sha256:f77dd3d3f1126236c4f17659da5ff1220f3183699762c3657124587a9885d86f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,21 +28,22 @@
       "\\mathbf{y}\\approx\\mathbf{A}\\mathbf{x}\n",
       "$$\n",
       "\n",
-      "We will see that under some conditions $\\mathbf{A}\\mathbf{x}=\\mathbf{y}$ exactly, but under other conditions we can only approximate $\\mathbf{y}$. Therefore, the least squares technique formulates the problem as\n",
+      "We will see that under some conditions $\\mathbf{A}\\mathbf{x}=\\mathbf{y}$ exactly, but under other conditions we can only approximate $\\mathbf{y}$. To find the best approximation of $\\mathbf{y}$, the least squares technique formulates the problem as\n",
       "\n",
       "$$\n",
-      "\\min\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|\n",
+      "\\min\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2\n",
       "$$\n",
       "\n",
       "or rather finding $\\hat{\\mathbf{x}}$ where\n",
       "\n",
+      "$\\DeclareMathOperator*{\\argmin}{arg\\,min}$\n",
       "$$\n",
-      "\\hat{\\mathbf{x}}=\\argmin_{x}\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|\n",
+      "\\hat{\\mathbf{x}}=\\argmin_{\\mathbf{x}}\\|\\mathbf{y}-\\mathbf{A}\\mathbf{x}\\|_2\n",
       "$$\n",
       "\n",
       "\n",
       "Specifically, we would like to know: \n",
-      " - How accurate is our approximation of $\\mathbf{y}$?"
+      " - How accurate is our approximation of $\\mathbf{y}$? That is, what is $\\|\\mathbf{y}-\\mathbf{A}\\hat{\\mathbf{x}}\\|_2$?"
      ]
     },
     {
@@ -64,7 +65,7 @@
       " &= \\left\\|\\sum_{i=r+1}^m\\mathbf{u}_i\\mathbf{u}_i^T\\mathbf{y}\\right\\|_2 \\\\\n",
       "\\end{align}\n",
       "\n",
-      "In the noisy case ... TO DO"
+      "In the noisy case ... TODO"
      ]
     },
     {
@@ -79,7 +80,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The desired function is described with $m$ sample points and could be a single-dimensional or multi-dimensional function. In the single dimensional case,  $\\mathbf{y}\\in\\mathbb{R}^{m}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$,  $\\mathbf{x}\\in\\mathbb{R}^{n}$, and\n",
+      "The desired function is described with $m$ sample points and could be a single-dimensional or multi-dimensional function. In the single dimensional case, $\\mathbf{y}\\in\\mathbb{R}^{m}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$,  $\\mathbf{x}\\in\\mathbb{R}^{n}$, and\n",
       "\n",
       "$$\n",
       "\\begin{bmatrix}\n",
@@ -125,13 +126,6 @@
       "$$\n",
       "\n",
       "In the multidimensional case, $\\mathbf{y}\\in\\mathbb{R}^{m\\times d}$, $\\mathbf{A}\\in\\mathbb{R}^{m\\times n}$, and $\\mathbf{x}\\in\\mathbb{R}^{n\\times d}$. However the multidimensional case is [separable](#Separability-of-decoding-dimensions), so we need only analyze the single dimensional case."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "As an aside, in statistics, $\\mathbf{y}$ is called the regressand, $\\mathbf{a}_i$ are called regressors, and $\\mathbf{x}$ are the regression coefficients."
      ]
     },
     {
