more discussion on LS error in NEF

--- a/theory/least_squares_error.ipynb
+++ b/theory/least_squares_error.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f77dd3d3f1126236c4f17659da5ff1220f3183699762c3657124587a9885d86f"
+  "signature": "sha256:1b2d2e7335a235a6adfd88cb4af766022258df2c33bec638b698ad97f00913ac"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -368,13 +368,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "NEF uses least squares to linear approximate some desired function using the weighted combination of neural tuning curves.\n",
+      "NEF uses least squares to linearly approximate a desired function using the weighted combination of neural tuning curves. The function is sampled at $m$ points and we have $n$ neurons. Since neurons are typically heterogenous, no tuning curve is a scaled version of another tuning curve, so $\\mathbf{A}$ is typically full rank. This means that if $m\\le n$, $r=m$ and $\\mathbf{A}\\hat{\\mathbf{x}}=\\mathbf{y}$ exactly. \n",
       "\n",
-      "| $A_{m\\times n}$ is    | full rank | Not full rank |\n",
-      "|-------:|:---------:|:-------------:|\n",
-      "|__square__,   $m=n$|    $I_{m\\times m}$       |    $I_{m\\times m,\\ r}$           |\n",
-      "|__fat__,   $m<n$|    sdfs       |    sdfs           |\n",
-      "|__skinny__,  $m>n$|    sdfs       |    sdfs           |"
+      "However, remember that our goal is to approximate the function underlying $\\mathbf{y}$ more than just the particular points of $\\mathbf{y}$. If we only use a few sample points to find the weights, then we are assuming that the tuning curves and desired function are linear between sample points. Even if the desired function is linear, tuning curves are generally nonlinear, so this assumption fails and we would perform poorly when approximating points of the function that were not sampled during training. Therefore, we typically set $m\\gg n$, in which case $r=n$. Since $m\\gg r$, the left nullspace will be very large compared to column space, and it will be very possible that our desired function has nonzero projections in the left null space of our activity matrix.\n",
+      "\n",
+      "TODO\n",
+      " - what do left singular vectors of tuning curves look like?"
      ]
     },
     {
